<resources>
    <string name="app_name">Naruto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="character">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="item_image_description">Item Image</string>
    <string name="tv_item_name">Item Name</string>
    <string name="tv_item_gender">Sex:</string>
    <string name="tv_item_status">Status:</string>
    <string name="tv_item_debut">Debut:</string>
    <string name="tv_item_kanji">Kanji:</string>
    <string name="not_found">NA</string>

    <!-- Actions -->
    <string name="action_settings">Settings</string>
    <string name="action_menu">Menu</string>
    <string name="action_filter">Filter</string>
    <string name="action_filter_downloaded">Downloaded</string>
    <string name="action_filter_bookmarked">Bookmarked</string>
    <string name="action_filter_tracked">Tracked</string>
    <string name="action_filter_unread">Unread</string>
    <string name="action_filter_empty">Remove filter</string>
    <string name="action_sort_alpha">Alphabetically</string>
    <string name="action_sort_total">Total chapters</string>
    <string name="action_sort_last_read">Last read</string>
    <string name="action_sort_last_checked">Last checked</string>
    <string name="action_sort_next_updated">Next expected update</string>
    <string name="action_sort_latest_chapter">Latest chapter</string>
    <string name="action_sort_chapter_fetch_date">Date fetched</string>
    <string name="action_sort_date_added">Date added</string>
    <string name="action_search">Search</string>
    <string name="action_search_settings">Search settings</string>
    <string name="action_global_search">Global search</string>
    <string name="action_select_all">Select all</string>
    <string name="action_select_inverse">Select inverse</string>
    <string name="action_mark_as_read">Mark as read</string>
    <string name="action_mark_as_unread">Mark as unread</string>
    <string name="action_mark_previous_as_read">Mark previous as read</string>
    <string name="action_download">Download</string>
    <string name="action_download_unread">Download unread chapters</string>
    <string name="action_bookmark">Bookmark chapter</string>
    <string name="action_remove_bookmark">Unbookmark chapter</string>
    <string name="action_delete">Delete</string>
    <string name="action_update">Update</string>
    <string name="action_update_library">Update library</string>
    <string name="action_enable_all">Enable all</string>
    <string name="action_disable_all">Disable all</string>
    <string name="action_edit">Edit</string>
    <string name="action_add">Add</string>
    <string name="action_add_category">Add category</string>
    <string name="action_edit_categories">Edit categories</string>
    <string name="action_rename_category">Rename category</string>
    <string name="action_move_category">Set categories</string>
    <string name="action_edit_cover">Edit cover</string>
    <string name="action_view_chapters">View chapters</string>
    <string name="action_stop">Stop</string>
    <string name="action_pause">Pause</string>
    <string name="action_previous_chapter">Previous chapter</string>
    <string name="action_next_chapter">Next chapter</string>
    <string name="action_retry">Retry</string>
    <string name="action_remove">Remove</string>
    <string name="action_start">Start</string>
    <string name="action_resume">Resume</string>
    <string name="action_open_in_browser">Open in browser</string>
    <!-- Do not translate "WebView" -->
    <string name="action_open_in_web_view">Open in WebView</string>
    <string name="action_web_view" translatable="false">WebView</string>
    <string name="action_migrate">Migrate</string>
    <string name="action_display_mode">Display mode</string>
    <string name="action_display">Display</string>
    <string name="action_display_grid">Compact grid</string>
    <string name="action_display_comfortable_grid">Comfortable grid</string>
    <string name="action_display_list">List</string>
    <string name="action_display_download_badge">Download badges</string>
    <string name="action_display_unread_badge">Unread badges</string>
    <string name="action_display_local_badge">Local badges</string>
    <string name="action_display_show_tabs">Show category tabs</string>
    <string name="action_display_show_number_of_items">Show number of items</string>
    <string name="action_disable">Disable</string>
    <string name="action_pin">Pin</string>
    <string name="action_unpin">Unpin</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_cancel_all">Cancel all</string>
    <string name="cancel_all_for_series">Cancel all for this series</string>
    <string name="action_sort">Sort</string>
    <string name="action_reorganize_by">Reorder</string>
    <string name="action_order_by_upload_date">By upload date</string>
    <string name="action_order_by_chapter_number">By chapter number</string>
    <string name="action_newest">Newest</string>
    <string name="action_oldest">Oldest</string>
    <string name="action_asc">Ascending</string>
    <string name="action_desc">Descending</string>
    <string name="action_move_to_top">Move to top</string>
    <string name="action_move_to_bottom">Move to bottom</string>
    <string name="action_install">Install</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="action_reset">Reset</string>
    <string name="action_undo">Undo</string>
    <string name="action_open_log">Open log</string>
    <string name="action_show_errors">Show errors</string>
    <string name="action_create">Create</string>
    <string name="action_restore">Restore</string>
    <string name="action_webview_back">Back</string>
    <string name="action_webview_forward">Forward</string>
    <string name="action_webview_refresh">Refresh</string>
    <string name="action_start_downloading_now">Start downloading now</string>
    <string name="tabs_header">Tabs</string>
    <string name="action_filter_status">Status</string>
    <string name="action_filter_gender">Gender</string>
    <string name="action_sort_power">Power</string>
    <string name="action_sort_debut">Debut</string>
    <string name="action_filter_male">Male</string>
    <string name="action_filter_female">Female</string>
    <string name="action_filter_bi">Orochimaru</string>
    <string name="action_filter_alive">Alive</string>
    <string name="action_filter_dead">Neji</string>
    <string name="place_holder_text">Placeholder Text</string>
    <string name="detail_about">About:</string>
    <string name="detail_debut">Debut:</string>
    <string name="detail_clan">Clan:</string>
    <string name="detail_village">Village:</string>
    <string name="detail_jutsus">Jutsus:</string>
    <string name="tv_item_range">Range:</string>
    <string name="tv_item_nature">Nature:</string>
    <string name="tv_item_type">Type:</string>
    <string name="tv_item_country">Country:</string>
    <string name="tv_item_leader">Leader:</string>
    <string name="detail_country">Country:</string>
    <string name="detail_leader">Leaders:</string>
    <string name="tv_item_air_date">Air Date:</string>
    <string name="tv_item_arc">Arc:</string>
    <string name="tv_item_op">Opening:</string>
    <string name="filler">FILLER</string>
    <string name="action_search_range">Search Range</string>
    <string name="action_filter_cannon">Cannon</string>
    <string name="action_sort_air_date">Air date</string>
    <string name="detail_arc">Arc:</string>
    <string name="detail_music">Music:</string>

</resources>